fixed dashboard-section styling to align crrctly

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,6 +1,7 @@
 .dashboard-section {
     padding-top: 10rem;
-    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 .dashboard-section h4 {
